# Subtitles-remover

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  jest.config.ts  package-lock.json  package.json  pyproject.toml  python.spec  setup.iss  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json
.github/workflows/: release.yml
app/main/: index.ts
app/main/helpers/: launchHelpers.ts  manageVideo.ts
app/main/lib/: donwloading.ts
app/main/lib/main/: index.ts  ipc.ts  processVideo.ts  window.ts
app/main/lib/progressBar/: ipc.ts  tray.ts  window.ts
app/main/updater/: AppUpdater.ts  index.ts
app/main/utils/: index.ts  isValidProps.ts
app/main/utils/SubtitlesRemover/: index.ts  ipc.ts
app/renderer/progress/: App.tsx
app/renderer/progress/components/: button.tsx  footer.tsx  imgViwer.tsx
app/renderer/progress/store/: downloading.ts  status.ts
app/renderer/shared/: progress.d.ts
app/renderer/update/assets/: main.css
app/spec/: index.spec.ts  manageVideo.test.ts
python/: __main__.py  pyproject.toml
src/components/: sharout.tsx
src/components/MainComponents/VideoPlayer/: index.tsx
src/components/common/: downloadButton.tsx  header.tsx  label.tsx  thumbnail.tsx
src/components/footer/: index.tsx
src/components/header/: index.tsx
src/components/input_componnent/: index.tsx
src/context/: info.tsx
src/hooks/: index.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/store/: index.ts
src/style/: index.scss
src/types/: api.d.ts
src/utils/: index.ts
(+24 files in other folders)
